After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664187 - Missing libtasn1 checks in configure
Missing libtasn1 checks in configure
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-11-16 10:58 UTC by Vincent Untz
Modified: 2011-11-21 10:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Vincent Untz 2011-11-16 10:58:47 UTC
The libtasn1 checks were removed, probably because of the gcr split.

However, there are still various "#include <libtasn1.h>" in the code, so I guess it should be added back :-)
Comment 1 Stef Walter 2011-11-21 10:20:07 UTC
Oops, yeah you're right. We were still using a few constants. Committed a fix:

commit 2343c7fcebb865c3c8ad139bac89f7b4a053cc66
Author: Stef Walter <stefw@collabora.co.uk>
Date:   Mon Nov 21 11:13:32 2011 +0100

    egg: Remove usage of libtasn1.h
    
     * Copy a few definitions for using the asn1Parser generated
       definitions files.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664187