egg: Remove usage of libtasn1.h

* Copy a few definitions for using the asn1Parser generated
   definitions files.

https://bugzilla.gnome.org/show_bug.cgi?id=664187